# everybody-codes-2024

./: .gitignore  CMakeLists.txt  LICENSE  Makefile
src/: main.cpp
src/common/: CMakeLists.txt  i_quest.hpp  input_reader.cpp  input_reader.hpp
src/quest01/: CMakeLists.txt  quest01.cpp  quest01.hpp
src/quest02/: CMakeLists.txt  quest02.cpp  quest02.hpp
